Added doc for building
